styles/index.css
/* Typography */

body {
  font-family: "Trebuchet MS", "Lucida Sans", Arial, sans-serif;
  display: grid;
  grid-template:
    "header aside" auto
    "main aside" 1fr
    "footer aside" auto /
    auto auto;

  overflow: hidden;
}

h1,
h2 {
  margin-bottom: 1rem;
}

/* Buttons */

button {
  padding: 0.5rem 1rem;

  text-transform: uppercase;
  font-size: 0.725rem;
  font-weight: bolder;

  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  background-color: white;

  border-radius: 8px;
  border: none;

  cursor: pointer;
}
button:hover {
  filter: brightness(92%);
}
button:active {
  filter: brightness(88%);
}

/* active Button */
.activeBtn {
  filter: brightness(88%);
}

/* Header */
#header {
  grid-area: header;

  display: grid;
  grid-template-columns: auto auto;

  height: fit-content;

  padding: 8px;
}

#header h1 {
  margin: 0;
}

#header .right-side {
  display: grid;
  grid-template-columns: auto auto;

  width: fit-content;
  gap: 32px;
  margin-right: 8px;

  justify-self: right;
  align-content: center;
}

.dropdown {
  /* Main Container <div>*/
  position: relative;
  display: inline-block;
}
.dropbtn {
  /* Drop button */
  border: none;
  background-color: white;
  box-shadow: none;

  scale: 1.5;
}
.dropdown-content {
  /* dropdown-content */
  display: none;
  position: absolute;
  top: 50px;
  left: -14px;

  background-color: white;
  overflow: hidden; /* Hide children border */

  border-radius: 8px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}
.dropdown-content a {
  /* Links of dropdown */
  color: black;
  background-color: white;
  text-decoration: none;
  padding: 12px 16px;

  display: block;
}
.dropdown-content a:hover {
  filter: brightness(92%);
  cursor: pointer;
}
.dropdown-content a:active {
  filter: brightness(88%);
}
/* Show on hover */
.dropdown:hover .dropdown-content {
  display: block;
}
/* Change btn on hover*/
.dropdown:hover .dropbtn {
  filter: brightness(88%);
}

/* Store */

#store {
  grid-area: main;

  padding: 1rem;

  overflow-y: scroll;

  background-color: #e7f4ea;
}

.store--item-list {
  display: grid;
  grid-template-columns: repeat(4, 125px);
  grid-gap: 1rem;
  justify-content: center;
}

.store--item-list li {
  display: grid;
  place-items: center;
  grid-row-gap: 0.5rem;
}

.store--item-icon {
  width: 125px;
  height: 125px;
}

@media only screen and (max-width: 600px) {
  .store--item-list {
    grid-template-columns: repeat(3, 125px);
  }
}

@media only screen and (max-width: 450px) {
  .store--item-list {
    grid-template-columns: repeat(2, 125px);
  }
}

/* Cart */

#cart {
  grid-area: aside;

  height: 60vh;
  width: auto;
  margin: 0 auto;
  padding: 1rem;

  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-gap: 1rem;
  justify-content: center;

  border-top: 2px solid #e7f4ea;
}

#cart h2 {
  margin-bottom: 0;
  text-align: center;
}

.cart--item-list-container {
  min-width: 320px;
  height: 100%;
  padding: 0 1rem;

  overflow-y: scroll;

  border-radius: 0.5rem;
  border: 2px solid #757575;
}

@media only screen and (max-width: 450px) {
  .cart--item-list-container {
    border: none;
  }
}

.cart--item-list li {
  padding: 1rem 0;

  display: grid;
  grid-template-columns: 24px minmax(150px, 1fr) repeat(3, auto);
  grid-gap: 0.5rem;
  align-items: center;

  border-bottom: 1px dotted #000000;

  font-size: 1.25rem;
}

.cart--item-list li:last-child {
  border-bottom: none;
}

.cart--item-icon {
  width: 24px;
}

.center {
  display: grid;
  place-items: center;
}

.quantity-btn {
  width: 20px;
  height: 20px;
  padding: 0;

  border-radius: 0.25rem;

  font-weight: bold;
}

.remove-btn {
  border: 2px solid #d32f2f;
  background-color: #ffcdd2;
  color: #d32f2f;
}

.add-btn {
  border: 2px solid #388e3c;
  background-color: #c8e6c9;
  color: #388e3c;
}

.quantity-text {
  width: 24px;
  height: 24px;

  border-radius: 0.25rem;
  border: 2px solid #757575;
  color: #757575;

  text-align: center;
  font-size: 0.75rem;
  font-weight: bold;
}

/* Total */

.total-section {
  padding: 0.5rem 1rem;

  display: grid;
  grid-template-columns: 1fr auto;
  align-items: center;
}

.total-number {
  font-weight: bold;
}

@media only screen and (max-width: 450px) {
  .total-section {
    border-top: 2px solid #00675b;
    border-bottom: 2px solid #00675b;
  }
}

/* Footer */

#footer {
  grid-area: footer;

  padding: 8px;
  text-align: center;
}

